bar chart + fix scroll on firefox

--- a/public/css/chartFactory.css
+++ b/public/css/chartFactory.css
@@ -69,3 +69,8 @@ line {
 .pieChart path {
   stroke: white;
 }
+
+/* Bar Chart */
+.bar {
+  fill: #009688; /* teal 500 */
+}
