--- a/public/css/pcm.css
+++ b/public/css/pcm.css
@@ -20,7 +20,7 @@
   border-bottom: 1px solid #BDBDBD;
   padding: 0 28px 0 28px;
   background-color: white;
-  z-index: 2;
+  z-index: 4;
   white-space: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
@@ -92,7 +92,6 @@
 }
 
 #pcm {
-  position: relative;
   width: 100%;
   max-height: 100%;
   padding-top: 56px;
@@ -100,6 +99,7 @@
 }
 
 #pcmFeatures {
+  transition: 0.2s;
   position: absolute;
   top: 0;
   height: 56px;
@@ -109,7 +109,12 @@
   overflow: hidden;
 }
 
+.cellEditVisible #pcmFeatures {
+  top: 56px;
+}
+
 #pcmProducts {
+  position: relative;
   white-space: nowrap;
 }
 
